# crafting-tool

./: .editorconfig  .env  .gitignore  .gitlab-ci.yml  .stylelintrc.json  Cargo.toml  Dockerfile  app.go  crafting-tool.sln  docker-compose.yml  eslint.config.cjs  go.mod  go.sum  package.json
Creastina.CraftingTool/: Creastina.CraftingTool.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
Creastina.CraftingTool/Authentication/: ApiKeyAttribute.cs  ApiKeyFilter.cs  CookieAuthenticationChecker.cs
Creastina.CraftingTool/Components/: App.razor  App.razor.css  Routes.razor  _Host.razor  _Imports.razor
Creastina.CraftingTool/Components/Pages/: Todos.razor  Todos.razor.cs  Todos.razor.css
Creastina.CraftingTool/Controllers/Api/: TodoController.cs
Creastina.CraftingTool/Migrations/: 20240927200041_Initial.Designer.cs  20240927200041_Initial.cs  CraftingContextModelSnapshot.cs
Creastina.CraftingTool/Models/: CraftingContext.cs  Todo.cs
Creastina.CraftingTool/Pages/: Login.cshtml  Login.cshtml.cs
Creastina.CraftingTool/Properties/: launchSettings.json
Creastina.CraftingTool/Repository/: EntryNotFoundException.cs  ITodoRepository.cs  TodoRepository.cs
Creastina.CraftingTool/Views/Shared/: _Layout.cshtml
Creastina.CraftingTool/wwwroot/css/: login.css  poppins.css  styles.css
api/: instruction.go  inventory.go  middleware.go  project.go  router.go
config/: configuration.go
database/: helper.go  instruction.go  inventory.go  migrate.go  models.go  project.go
dbal/: Cargo.toml
dbal/src/: lib.rs
entities/: Cargo.toml
entities/src/: lib.rs
error/: Cargo.toml
error/src/: lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs
static/: index.js
static/css/: button.css  cards.css  content.css  dialog.css  form.css  gluten.css  login.css  message.css  navigation.css  page.css  projects.css  properties.css  sidebar.css  steps.css  stocker.css  toolbar.css  typography.css  variables.css
static/js/: closeEvent.js  instructions.js  inventory.js  login.js  projects.js
static/js/instructions/: create-instruction.js  edit-instruction.js  steps.js
static/js/inventory/: create-box.js  create-inventory.js  edit-inventory.js
static/js/projects/: count-setter.js  create-category.js  create-project.js  edit-project.js
static/lib/: alpine-anchor.js  alpine-collapse.js  alpine-focus.js  alpine-masonry.js  jinya-alpine-tools.js
static/lib/ui/: alert.js  confirm.js  loader.js
static/templates/: instructions.html  inventory.html  login.html  projects.html
web/: Cargo.toml  index.go
web/src/: app.rs  lib.rs  main.rs
web/style/: _poppins.scss  _styles.scss  main.scss
web/tmpl/: index.gohtml
