[package]
name = "crafting"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crafting-entities = { path = "entities" }
crafting-error = { path = "error" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crafting-dbal = { path = "dbal" }
crafting-migration = { path = "migration" }

[workspace]
members = [
    "dbal",
    "migration",
    "entities",
    "error",
    "web",
]

[workspace.package]
version = "2.0.0"
license = "custom"
edition = "2021"

[workspace.dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix_web_openidconnect = { git = "https://github.com/DerKnerd/ActixWeb_openIDConnect.git" }
console_error_panic_hook = "0.1"
dotenvy = "0.15"
env_logger = "0.11"
leptos = "0.8"
leptos_actix = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
log = "0.4"
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "*", features = ["HtmlDialogElement"] }

[workspace.dependencies.sea-orm]
version = "1"
features = [
    "with-json",
    "runtime-actix-rustls",
    "sqlx-postgres",
]

[workspace.dependencies.sea-orm-migration]
version = "1"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[profile.web-dev]
inherits = "dev"
# optimization for size (more aggressive)
opt-level = "z"
strip = false

[profile.web-release]
inherits = "release"
# less code to include in binary
panic = "abort"
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = "z"
# link time optimization using whole-program analysis
lto = true
strip = false

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = false
